2024-09-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Optimize shift of 8-bit values, part of RFE #939.

2024-09-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix an unsafe read being used even without --allow-unsafe-read.

2024-08-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsalloc.hpp:
	  Do not compile with older, known-to-be-broken boost.

2024-08-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCval.c:
	  Fix bug #3745.

2024-08-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/Makefile.in: fixed distclean for cases dir

2024-08-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Fix label at end of compound statement.

2024-08-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Fix label defore declaration.
	* src/pdk/gen.c:
	  Fix a pdk code generation issue, part of bug #3697.

2024-08-14 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdccconf_in.h:
	  Regenerate file via autoheader to fix --disable-f8-port.
	* support/regression/tests/bug-3745.c.in:
	  Test more qualifiers.

2024-08-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/MakeList:
	  Disable a test for pdk15, where it fails due to lack of memory.
	* src/SDCCast.c,
	  src/SDCCopt.c,
	  src/SDCCsalloc.hpp,
	  src/mcs51/main.c,
	  src/z80/gen.c,
	  src/SDCCsymt.c:
	  A bit of code refactoring inspired by GCC 14 / clang 19 warnings.
	* support/regression/tests/wcsto.c:
	  Fix an issue discovered via a GCC 14 warning.

2024-08-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/ds390/gen.c:
	  Fix bug #3769.

2024-08-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c,
	  src/SDCCsymt.c,
	  support/regression/tests/bug-3766.c:
	  Fix bug #3766.
	* src/pic16/glue.c:
	  Try to fix bug #3767.
	* support/regression/tests/bug-3745.c:
	  Regression test for bug #3745.
